@@ -2,6 +2,8 @@ package kr.sols.domain.suggestion.service;
 
 import kr.sols.domain.company.dto.CompanyListDto;
 import kr.sols.domain.company.service.CompanyService;
+import kr.sols.domain.member.dto.MemberListDto;
+import kr.sols.domain.member.dto.MemberPageDto;
 import kr.sols.domain.member.entity.Member;
 import kr.sols.domain.member.exception.MemberException;
 import kr.sols.domain.member.repository.MemberRepository;
@@ -9,15 +11,16 @@ import kr.sols.domain.member.service.MemberService;
 import kr.sols.domain.position.Exception.PositionException;
 import kr.sols.domain.position.entity.Position;
 import kr.sols.domain.position.repository.PositionRepository;
-import kr.sols.domain.suggestion.dto.SuggestionCreatedReq;
-import kr.sols.domain.suggestion.dto.SuggestionCreatedRes;
-import kr.sols.domain.suggestion.dto.SuggestionDto;
-import kr.sols.domain.suggestion.dto.SuggestionListDto;
+import kr.sols.domain.suggestion.dto.*;
 import kr.sols.domain.suggestion.entity.Status;
 import kr.sols.domain.suggestion.entity.Suggestion;
 import kr.sols.domain.suggestion.exception.SuggestionException;
 import kr.sols.domain.suggestion.repository.SuggestionRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -25,6 +28,7 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toList;
 import static kr.sols.exception.ErrorCode.*;
 
 @Service
@@ -55,16 +59,31 @@ public class SuggestionService {
     }
 
     @Transactional(readOnly = true)
-    public List<SuggestionListDto> getAllSuggestion() {
-        List<Suggestion> suggestions = suggestionRepository.findAllWithMembersPositionsAndCompanies();
-        return suggestions.stream()
+    public SuggestionPageDto getAllSuggestion(Integer pageNum, Integer pageSize) {
+        Pageable pageable = PageRequest.of(pageNum - 1, pageSize);
+        Page<Suggestion> suggestionPage = suggestionRepository.findAllWithMembersPositionsAndCompanies(pageable);
+
+        int totalPageNum = suggestionPage.getTotalPages();
+        int currentPageNum = suggestionPage.getNumber() + 1;
+
+        if (currentPageNum > totalPageNum || currentPageNum < 1) throw new SuggestionException(PAGE_NOT_FOUND);
+
+        List<SuggestionListDto> suggestions = suggestionPage.getContent()
+                .stream()
                 .map(suggestion -> {
                     String memberName = suggestion.getMember().getName();
                     String companyName = suggestion.getPosition().getCompany().getCompanyName();
-
                     return SuggestionListDto.fromEntity(suggestion, companyName, memberName);
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        return SuggestionPageDto.builder()
+                .suggestions(suggestions)
+                .totalElements((int) suggestionPage.getTotalElements())
+                .totalPages(totalPageNum)
+                .currentPage(currentPageNum)
+                .pageSize(pageSize)
+                .build();
     }
 
     @Transactional(readOnly = true)
